attempt to fix border issue on mobile

--- a/src/components/DataBlock.scss
+++ b/src/components/DataBlock.scss
@@ -31,6 +31,7 @@
 
 .image {
     border: 2px solid rgb(101, 167, 185);
+    -webkit-border: 2px solid rgb(101, 167, 185);
     max-width:100%;
     max-height:300px;
     object-fit:contain;
